--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <h1> hello </h1>
           
         <script src="js/jquery-3.1.1.min.js"></script>
+        <script src="js/cookies.js"></script>
         <script src="js/index.js"></script>
+
     </body>
 
 </html>
