--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
         </section>
 
         <script src="js/jquery-3.1.1.min.js"></script>
+        <script src="js/cookies.js"></script>
         <script src="js/design.js"></script>
         <script src="js/index.js"></script>
 
