card page design

--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
                 <img src="image/logo.png">
             </a>
             <ul>
-                <li class="home-link active"><a href="#home">Home</a></li>
-                <li><a class="about-link" href="#about">About Us</a></li>
-                <li><a class="product-link" href="#some_product">Some Products</a class="about-link"></li>
-                <li><a class="leaderShip-link" href="#LeaderShip">LeaderShip</a class="about-link"></li>
-                <li><a class="contact-link" href="#contact">Contact</a class="about-link"></li>
+                <li class="home-link active"><a href="index.html#home">Home</a></li>
+                <li><a class="about-link" href="index.html#about">About Us</a></li>
+                <li><a class="product-link" href="index.html#some_product">Some Products</a class="about-link"></li>
+                <li><a class="leaderShip-link" href="index.html#LeaderShip">LeaderShip</a class="about-link"></li>
+                <li><a class="contact-link" href="index.html#contact">Contact</a class="about-link"></li>
             </ul>
             <div>
                 <span>
                     <i class="fa fa-heart-o"></i>
                     <span class="label" style="right: 200px;">01</span>
                 </span>
-                <span>
+                <a href="card.html">
                     <i class="fa fa-shopping-cart"></i>
                     <span class="label" style="right: 120px;">04</span>
-                </span>
+                </a>
             </div>
         </div>
         <section class="banner">
