make filter by category disabled when count = 0

--- a/secPage.html
+++ b/secPage.html
@@ -38,12 +38,12 @@
 
             <div id="priceFilterMin">
                 <label for="priceFilterMin">From:</label>
-                <input type="text" id="priceFilterMinVal">
+                <input type="number" min="0" id="priceFilterMinVal">
             </div>
 
             <div id="priceFilterMax">
                 <label for="priceFilterMax">To :</label>
-                <input type="text" id="priceFilterMaxVal">
+                <input type="number" min="0" id="priceFilterMaxVal">
             </div>
 
             <div id="priceFilterSlider"></div>
@@ -51,7 +51,7 @@
 
         <div id="categoryFilter">
 
-            
+
         </div>
 
         <input type="button" id="applyFilterBtn" value="Apply" />
