--- a/secPage.html
+++ b/secPage.html
@@ -71,6 +71,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="js/changeCurrency.js"></script>
     <script src="js/cookies.js"></script>
     <script src="js/index.js"></script>
     <script src="js/filterPage.js"></script>
