category page & fix connection

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <div>
                 <a href="wish.html">
                     <i class="fa fa-heart-o"></i>
-                    <span class="label" style="right: 200px;">01</span>
+                    <span id="wishCountSpan" class="label" style="right: 200px;">0</span>
                 </a>
                 <a href="cart.html">
                     <i class="fa fa-shopping-cart"></i>
-                    <span id="cartCountSpan" class="label" style="right: 120px;">00</span>
+                    <span id="cartCountSpan" class="label" style="right: 120px;">0</span>
                 </a>
             </div>
         </div>
@@ -62,7 +62,7 @@
                     <p>Shop with us and enjoy by our discounts.
                         electronic , computing , sporting and many other section. Please spread a website to your friends.
                     </p>
-                    <button class="btn">Shop Now</button>
+                    <a href="category.html" class="btn">Shop Now</a>
                 </div>
             </div>
         </section>  
@@ -272,7 +272,6 @@
         <script src="js/design.js"></script>
         <script src="js/cookies.js"></script>
         <script src="js/index.js"></script>
-        <script src="js/CartInteraction.js"></script>
     </body>
 
 </html>
