--- a/wish.html
+++ b/wish.html
@@ -46,11 +46,11 @@
             <div>
                 <a href="wish.html">
                     <i class="fa fa-heart-o"></i>
-                    <span class="label" style="right: 200px;">01</span>
+                    <span  id="wishCountSpan" class="label" style="right: 200px;">0</span>
                 </a>
                 <a href="cart.html">
                     <i class="fa fa-shopping-cart"></i>
-                    <span id="cartCountSpan" class="label" style="right: 120px;">00</span>
+                    <span id="cartCountSpan" class="label" style="right: 120px;">0</span>
                 </a>
             </div>
         </div>
@@ -149,12 +149,10 @@
             </div>
         
         </section>
-
         <script src="js/jquery-3.1.1.min.js"></script>
         <script src="js/design.js"></script>
         <script src="js/cookies.js"></script>
         <script src="js/index.js"></script>
-        <script src="js/CartInteraction.js"></script>
     </body>
 
 </html>
