add Currency conversion to filter page

--- a/secPage.html
+++ b/secPage.html
@@ -61,9 +61,22 @@
 
         
         <input type="button" id="applyFilterBtn" value="Apply" />
+        <input type="button" id="resetFilterBtn" value="Reset" />
 
     </div>
 
+    <div id="viewedProductsPreference">   
+        <label for="currenciesSelect">Currency :</label>
+        <select id="currenciesSelect">
+            <option value="USD">USD</option>
+            <option value="EGP">EGP</option>
+            <option value="EUR">EUR</option>
+            <option value="SAR">SAR</option>
+
+
+        </select>
+
+    </div>
 
     <div id="cardContainer"></div>
 
