--- a/category.html
+++ b/category.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M3B | category</title>
-    <link rel="stylesheet" href="css/category.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="css/category.css">
 
 </head>
 <body>
@@ -21,7 +20,7 @@
         <ul>
             <li class="home-link active"><a href="index.html#home">Home</a></li>
             <li><a class="about-link" href="index.html#about">About Us</a></li>
-            <li><a class="product-link" href="secPage.html">Some Products</a class="about-link"></li>
+            <li><a class="product-link" href="category.html">Some Products</a class="about-link"></li>
             <li><a class="leaderShip-link" href="index.html#LeaderShip">LeaderShip</a class="about-link"></li>
             <li><a class="contact-link" href="index.html#contact">Contact</a class="about-link"></li>
         </ul>
