--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul>
                 <li class="home-link active"><a href="index.html#home">Home</a></li>
                 <li><a class="about-link" href="index.html#about">About Us</a></li>
-                <li><a class="product-link" href="secPage.html">Some Products</a class="about-link"></li>
+                <li><a class="product-link" href="index.html#some_product">Some Products</a class="about-link"></li>
                 <li><a class="leaderShip-link" href="index.html#LeaderShip">LeaderShip</a class="about-link"></li>
                 <li><a class="contact-link" href="index.html#contact">Contact</a class="about-link"></li>
             </ul>
