"categories menu send uset to the category page"

--- a/index.html
+++ b/index.html
@@ -190,18 +190,18 @@
             <div class="container">
                 <div>
                     <h3><span>C</span>ategories</h3>
-                    <ul>
+                    <ul id="categoriesSelector">
                         <li>
-                            <a href="#">Electronic</a>
+                            <a href="#"  >Electronic</a>
                         </li>
                         <li>
-                            <a href="#">Fashion</a>
+                            <a href="#" >Fashion</a>
                         </li>
                         <li>
-                            <a href="#">Computing</a>
+                            <a href="#" >Computing</a>
                         </li>
                         <li>
-                            <a href="#">Sporting</a>
+                            <a href="#" >Sporting</a>
                         </li>
                        
                     </ul>
