"fix logo colors , clickable produckts opens a new product window"

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <h2><span>L</span>eadership</h2>
              <div class="teammembers">
                  <div>
-                     <img src="image/person_3.jpg">
+                    <img src="image/maleAvatar.png" height="250px">
                      <h3>Mohamed Abdelaty</h3>
                      <h5>ITI SD PD</h5>
                      <p>
@@ -121,7 +121,7 @@
                      </p>
                  </div>
                  <div>
-                    <img src="image/person_3.jpg">
+                    <img src="image/maleAvatar.png" height="250px">
                     <h3>Mahmoud Naser</h3>
                     <h5>ITI SD PD</h5>
                     <p>
@@ -131,7 +131,8 @@
                     </p>
                 </div>
                 <div>
-                    <img src="image/person_3.jpg">
+                    <img src="image/femaleAvatar.png" height="250px">
+
                     <h3>Bardis Maher</h3>
                     <h5>ITI SD SWA</h5>
                     <p>
@@ -141,7 +142,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="image/person_3.jpg">
+                    <img src="image/maleAvatar.png" height="250px">
                     <h3>Mina Khalaf</h3>
                     <h5>ITI SD PD</h5>
                     <p>
