--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,7 @@
             <ul>
                 <li class="home-link active"><a href="index.html#home">Home</a></li>
                 <li><a class="about-link" href="index.html#about">About Us</a></li>
-                <li><a class="product-link" href="category.html">Some Products</a class="about-link"></li>
+                <li><a class="product-link" href="category.html">Our Products</a class="about-link"></li>
                 <li><a class="leaderShip-link" href="index.html#LeaderShip">LeaderShip</a class="about-link"></li>
                 <li><a class="contact-link" href="index.html#contact">Contact</a class="about-link"></li>
             </ul>
