refactor wishListBtn & cartBtn style

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <div>
                 <a href="wish.html">
                     <i class="fa fa-heart-o"></i>
-                    <span id="wishCountSpan" class="label" style="right: 200px;">0</span>
+                    <span id="wishCountSpan" class="label">0</span>
                 </a>
                 <a href="cart.html">
                     <i class="fa fa-shopping-cart"></i>
-                    <span id="cartCountSpan" class="label" style="right: 120px;">0</span>
+                    <span id="cartCountSpan" class="label">0</span>
                 </a>
             </div>
         </div>
