--- a/category.html
+++ b/category.html
@@ -8,13 +8,11 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/category.css">
-
+    <link rel="stylesheet" href="css/cart-wishList-btns.css">
 
 </head>
 
 <body>
-
-
     <div class="second-nav">
         <a class="logo" href="index.html">
             <img src="image/logo.png">
