--- a/wish.html
+++ b/wish.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/wish.css">
+    <link rel="stylesheet" href="css/cart-wishList-btns.css">
 
 </head>
 <body>
